--- a/email.ipynb
+++ b/email.ipynb
@@ -9,7 +9,7 @@
     "from langchain_groq import ChatGroq\n",
     "\n",
     "llm = ChatGroq(\n",
-    "    groq_api_key='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',\n",
+    "    groq_api_key='your groq api key',\n",
     "    model_name = \"llama-3.1-70b-versatile\",\n",
     "    temperature=0\n",
     ")"
