Prepare Chroma db

--- a/email.ipynb
+++ b/email.ipynb
@@ -100,6 +100,64 @@
    "source": [
     "json_res"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prepare Chroma DB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"my_portfolio.csv\")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import uuid\n",
+    "import chromadb\n",
+    "\n",
+    "client = chromadb.PersistentClient('vectorstore')\n",
+    "collection = client.get_or_create_collection(name=\"portfolio\")\n",
+    "\n",
+    "if not collection.count():\n",
+    "    for _, row in df.iterrows():\n",
+    "        collection.add(documents=row[\"Techstack\"],\n",
+    "                       metadatas={\"links\": row[\"Links\"]},\n",
+    "                       ids=[str(uuid.uuid4())])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "links = collection.query(query_texts=job['skills'], n_results=2).get('metadatas', [])\n",
+    "links"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "job = json_res\n",
+    "job['skills']"
+   ]
   }
  ],
  "metadata": {
