Write the prompt email

--- a/email.ipynb
+++ b/email.ipynb
@@ -158,6 +158,51 @@
     "job = json_res\n",
     "job['skills']"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prompt Email"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_email = PromptTemplate.from_template(\n",
+    "        \"\"\"\n",
+    "        ### JOB DESCRIPTION:\n",
+    "        {job_description}\n",
+    "        \n",
+    "        ### INSTRUCTION:\n",
+    "        You are Mohan, a business development executive at AtliQ. AtliQ is an AI & Software Consulting company dedicated to facilitating\n",
+    "        the seamless integration of business processes through automated tools. \n",
+    "        Over our experience, we have empowered numerous enterprises with tailored solutions, fostering scalability, \n",
+    "        process optimization, cost reduction, and heightened overall efficiency. \n",
+    "        Your job is to write a cold email to the client regarding the job mentioned above describing the capability of AtliQ \n",
+    "        in fulfilling their needs.\n",
+    "        Also add the most relevant ones from the following links to showcase Atliq's portfolio: {link_list}\n",
+    "        Remember you are Mohan, BDE at AtliQ. \n",
+    "        Do not provide a preamble.\n",
+    "        ### EMAIL (NO PREAMBLE):\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain_email = prompt_email | llm\n",
+    "res = chain_email.invoke({\"job_description\": str(job), \"link_list\": links})\n",
+    "print(res.content)"
+   ]
   }
  ],
  "metadata": {
